add list-placement and list-split from tut

--- a/config/help.tmpl
+++ b/config/help.tmpl
@@ -61,11 +61,17 @@ Here's a list of supported commands.
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:lists{{ Flags "-" }}{{ Color .Style.Text }}
 	Show a list of your lists
 
+{{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:list-placement{{ Flags "-" }}{{ Color .Style.Text }} top|right|bottom|left
+	Place the lists where you want them
+
+{{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:list-split{{ Flags "-" }}{{ Color .Style.Text }} row|column
+	Split lists as rows or columns
+
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:muting{{ Flags "-" }}{{ Color .Style.Text }}
-	lists users that you have muted
+	Lists users that you have muted
 
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:preferences{{ Flags "-" }}{{ Color .Style.Text }}
-    update your profile and some other settings
+    Update your profile and some other settings
 
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:profile{{ Flags "-" }}{{ Color .Style.Text }}
 	Go to your own profile
