--- a/config/help.tmpl
+++ b/config/help.tmpl
@@ -76,6 +76,9 @@ Here's a list of supported commands.
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:profile{{ Flags "-" }}{{ Color .Style.Text }}
 	Go to your own profile
 
+{{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:proportions{{ Flags "-" }}{{ Color .Style.Text }} [int] [int]
+    Set proportions for list and content with an int. First list proportion then content proportion
+
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:requests{{ Flags "-" }}{{ Color .Style.Text }}
 	See following requests
 
