clear notifications, scroll and buttons

--- a/config/help.tmpl
+++ b/config/help.tmpl
@@ -45,6 +45,9 @@ Here's a list of supported commands.
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:bookmarks{{ Flags "-" }}{{ Color .Style.Text }}
 	Lists all your bookmarks
 
+{{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:clear-notifications{{ Flags "-" }}{{ Color .Style.Text }}
+	Clear all notifications
+
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:compose{{ Flags "-" }}{{ Color .Style.Text }}
 	Compose a new toot
 
