add history to help

--- a/config/help.tmpl
+++ b/config/help.tmpl
@@ -61,6 +61,9 @@ Here's a list of supported commands.
 {{- Color .Style.TextSpecial2 }}{{ Flags "b" }} :help{{ Flags "-" }}{{ Color .Style.Text }}
 	View this help message
 
+{{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:history{{ Flags "-" }}{{ Color .Style.Text }}
+	Show edits of a toot
+
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:lists{{ Flags "-" }}{{ Color .Style.Text }}
 	Show a list of your lists
 
