add edit to help

--- a/config/help.tmpl
+++ b/config/help.tmpl
@@ -51,6 +51,9 @@ Here's a list of supported commands.
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:compose{{ Flags "-" }}{{ Color .Style.Text }}
 	Compose a new toot
 
+{{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:edit{{ Flags "-" }}{{ Color .Style.Text }}
+	Edit one of your toots
+
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:favorited{{ Flags "-" }}{{ Color .Style.Text }}
 	Lists toots you've favorited
 
