--- a/config/help.tmpl
+++ b/config/help.tmpl
@@ -106,6 +106,9 @@ Here's a list of supported commands.
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:tag{{ Flags "-" }}{{ Color .Style.Text }} tagname
 	See toots for a tag e.g. :tag linux
 
+{{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:tags{{ Flags "-" }}{{ Color .Style.Text }} tagname
+    List of followed tags
+
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:unfollow-tag{{ Flags "-" }}{{ Color .Style.Text }}
     Followed by the hashtag to unfollow e.g. :unfollow-tag tut
 
