add bookmarks again

--- a/config/help.tmpl
+++ b/config/help.tmpl
@@ -103,6 +103,9 @@ Here's a list of supported commands.
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:stick-to-top{{ Flags "-" }}{{ Color .Style.Text }}
     Toggle the stick-to-top setting.
 
+{{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:saved{{ Flags "-" }}{{ Color .Style.Text }}
+	Alias for :bookmarks
+
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:tag{{ Flags "-" }}{{ Color .Style.Text }} tagname
 	See toots for a tag e.g. :tag linux
 
