--- a/config/help.tmpl
+++ b/config/help.tmpl
@@ -97,6 +97,9 @@ Here's a list of supported commands.
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:proportions{{ Flags "-" }}{{ Color .Style.Text }} [int] [int]
     Set proportions for list and content with an int. First list proportion then content proportion
 
+{{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:refetch{{ Flags "-" }}{{ Color .Style.Text }}
+    Refetch the current item
+
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:requests{{ Flags "-" }}{{ Color .Style.Text }}
 	See following requests
 
