--- a/config/toot.tmpl
+++ b/config/toot.tmpl
@@ -71,3 +71,4 @@
 {{- Color .Style.TextSpecial1 }} {{ .Toot.Boosts }}
 {{- Color .Style.Subtle }} Favorites
 {{- Color .Style.TextSpecial1 }} {{ .Toot.Favorites }}
+{{- Color .Style.TextSpecial2 }} {{ .Toot.Lang }}
