minor typo fixes

--- a/config/help.tmpl
+++ b/config/help.tmpl
@@ -75,7 +75,7 @@ Here's a list of supported commands.
     List of people the account are following. It only works on profiles
 
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:following{{ Flags "-" }}{{ Color .Style.Text }}
-    List of people follwing the account. It only works on profiles
+    List of people following the account. It only works on profiles
 
 {{ Color .Style.TextSpecial2 }}{{ Flags "b" }}:help{{ Flags "-" }}{{ Color .Style.Text }}
     Show help for how to use tut
